Android: Trying to make the playlist list cells movable; there's no standard way in Android to do this. Thank you Google once again for a job well done. Apple = 2 lines of code. Android = Dude, this is rocket science, you should create a class based on ListView and do it yourself.
Fixed big notification/standard notification switch. Added rounded corners to all buttons.

Related to issue #406.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Classes\Cache\BitmapWorkerTask.cs" />
     <Compile Include="Classes\Cache\AsyncBitmapDrawable.cs" />
     <Compile Include="Classes\Clients\MyWebViewClient.cs" />
+    <Compile Include="Classes\Controls\CustomListView.cs" />
     <Compile Include="Classes\Controls\SquareImageView.cs" />
     <Compile Include="Classes\Controls\EqualizerPresetGraphView.cs" />
     <Compile Include="Classes\Controls\OutputMeterView.cs" />
