Android: Fixed back/up navigation of Playlist; it now returns to the correct previous activity. Added move icon for movable cells. More work on trying to make cells movable in ListView.
Related to issue #406.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -500,6 +500,10 @@
     <AndroidResource Include="Resources\Anim\flipper_changetab_in.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\drawable-hdpi\icon_move.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\icon_move.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\icon_move.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\icon_move.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\armeabi\" />
