Mac: Now building correctly with new TinyIoC assembly.
Related to issue #405.

--- a/MPfm/MPfm.Core/MPfm.Core.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.csproj
@@ -82,15 +82,14 @@
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="TinyIoC">
+      <HintPath>Lib\TinyIoC.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Content Include="Lib\PCL\TinyIoC.dll" />
     <Content Include="Lib\TinyIoC.dll" />
-    <Reference Include="TinyIoC, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Lib\TinyIoC.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conversion.cs" />
