--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -120,6 +120,9 @@
     <Reference Include="MonoMac">
       <HintPath>Lib\MonoMac.dll</HintPath>
     </Reference>
+    <Reference Include="TinyIoC">
+      <HintPath>..\MPfm.Core\Lib\TinyIoC.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Windows\UpdateLibraryWindow.cs" />
