--- a/MPfm/MPfm.Sound/MPfm.Sound.WindowsPhone.csproj
+++ b/MPfm/MPfm.Sound/MPfm.Sound.WindowsPhone.csproj
@@ -5,12 +5,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5CA0AA57-8F15-4DC2-B5C6-25692F200869}</ProjectGuid>
+    <ProjectGuid>{591A3842-87BC-467F-AA99-42749C8DBFB3}</ProjectGuid>
     <ProjectTypeGuids>{C089C8C0-30E0-4E22-80C0-CE093F111A43};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MPfm.Core</RootNamespace>
-    <AssemblyName>MPfm.Core</AssemblyName>
+    <RootNamespace>MPfm.Sound</RootNamespace>
+    <AssemblyName>MPfm.Sound</AssemblyName>
     <TargetFrameworkIdentifier>WindowsPhone</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
@@ -82,27 +82,50 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Compile Include="ByteArrayQueue.cs" />
-    <Compile Include="CacheStore.cs" />
-    <Compile Include="Conversion.cs" />
-    <Compile Include="DatabaseFieldNameAttribute.cs" />
-    <Compile Include="Normalizer.cs" />
-    <Compile Include="OS.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tracing.cs" />
-    <Compile Include="Attributes\DatabaseFieldAttribute.cs" />
-    <Compile Include="Extensions\DictionaryExtension.cs" />
-    <Compile Include="Helpers\XMLHelper.cs" />
-    <Compile Include="Network\IPAddressRangeFinder.cs" />
-    <Compile Include="Network\WebClientTimeout.cs" />
-    <Compile Include="XmlSerialization.cs" />
+    <Content Include="Lib\taglib-sharp.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="TinyIoC">
-      <HintPath>Lib\PCL\TinyIoC.dll</HintPath>
+    <Compile Include="AudioFiles\AudioFile.cs" />
+    <Compile Include="AudioFiles\AudioTools.cs" />
+    <Compile Include="AudioFiles\AudioFileFormatExtension.cs" />
+    <Compile Include="AudioFiles\AudioFileFormatExtensions.cs" />
+    <Compile Include="AudioFiles\ConvertAudio.cs" />
+    <Compile Include="AudioFiles\AudioFileFormat.cs" />
+    <Compile Include="PeakFiles\PeakFileCorruptedException.cs" />
+    <Compile Include="PeakFiles\PeakFileDoneData.cs" />
+    <Compile Include="PeakFiles\PeakFileFormatIncompatibleException.cs" />
+    <Compile Include="PeakFiles\PeakFileProgressData.cs" />
+    <Compile Include="PeakFiles\PeakFileStartedData.cs" />
+    <Compile Include="Tags\APEMetadata.cs" />
+    <Compile Include="Playlists\Playlist.cs" />
+    <Compile Include="Playlists\PlaylistItem.cs" />
+    <Compile Include="Playlists\PlaylistTools.cs" />
+    <Compile Include="Playlists\PlaylistFileFormat.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tags\APETag.cs" />
+    <Compile Include="Tags\SV7Metadata.cs" />
+    <Compile Include="Tags\SV7Tag.cs" />
+    <Compile Include="Tags\ID3v2Tag.cs" />
+    <Compile Include="Tags\ID3v2Metadata.cs" />
+    <Compile Include="Tags\SV8Tag.cs" />
+    <Compile Include="Tags\SV8Metadata.cs" />
+    <Compile Include="PeakFiles\IPeakFileService.cs" />
+    <Compile Include="PeakFiles\PeakFileService.cs" />
+    <Compile Include="Readers\XingInfoHeaderReader.cs" />
+    <Compile Include="BassNetKey.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="taglib-sharp, Version=2.0.4.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Lib\taglib-sharp.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MPfm.Core\MPfm.Core.WindowsPhone.csproj">
+      <Project>{5CA0AA57-8F15-4DC2-B5C6-25692F200869}</Project>
+      <Name>MPfm.Core.WindowsPhone</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
