--- a/MPfm/MPfm.WindowsPhone/MPfm.WindowsPhone.csproj
+++ b/MPfm/MPfm.WindowsPhone/MPfm.WindowsPhone.csproj
@@ -152,6 +152,10 @@
       <Project>{5CA0AA57-8F15-4DC2-B5C6-25692F200869}</Project>
       <Name>MPfm.Core.WindowsPhone</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MPfm.Library\MPfm.Library.WindowsPhone.csproj">
+      <Project>{317F03EF-9294-47D4-A915-7ABDC647897A}</Project>
+      <Name>MPfm.Library.WindowsPhone</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MPfm.Player\MPfm.Player.WindowsPhone.csproj">
       <Project>{4ACC27D9-C476-4BCA-B5BE-F1A067B5E317}</Project>
       <Name>MPfm.Player.WindowsPhone</Name>
