WindowsStore/WindowsPhone: More work on MPfm.Library; a new implementation of ISQLiteGateway is in progress for WinRT.
Related to issue #423 and issue #424.

--- a/MPfm/MPfm.Core/MPfm.Core.WindowsStore.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.WindowsStore.csproj
@@ -108,6 +108,7 @@
     <Compile Include="CacheStore.cs" />
     <Compile Include="Conversion.cs" />
     <Compile Include="DatabaseFieldNameAttribute.cs" />
+    <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Normalizer.cs" />
     <Compile Include="OS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -117,6 +118,7 @@
     <Compile Include="Helpers\XMLHelper.cs" />
     <Compile Include="Network\IPAddressRangeFinder.cs" />
     <Compile Include="Network\WebClientTimeout.cs" />
+    <Compile Include="WinRT\ExtensionMethods.cs" />
     <Compile Include="XmlSerialization.cs" />
   </ItemGroup>
   <ItemGroup>
