Android: Added rounded transparent button theme throughout the application. Now building the project with Xamarin.Android 4.8.1; debugging works again on Android 4.3.
Related to issue #406.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -507,6 +507,7 @@
     <AndroidResource Include="Resources\drawable-mdpi\icon_move.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\icon_move.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\icon_move.png" />
+    <AndroidResource Include="Resources\drawable\transparentbutton_selector.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\armeabi\" />
