--- a/MPfm/MPfm.Core/MPfm.Core.iOS.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.iOS.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -141,8 +141,15 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="TinyIoC">
+      <HintPath>Lib\iOS\TinyIoC.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Content Include="Lib\PCL\TinyIoC.dll" />
+    <Content Include="Lib\TinyIoC.dll" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="Conversion.cs" />
     <Compile Include="Attributes\DatabaseFieldAttribute.cs" />
@@ -156,8 +163,12 @@
     <Compile Include="Helpers\XMLHelper.cs" />
     <Compile Include="Network\IPAddressRangeFinder.cs" />
     <Compile Include="Network\WebClientTimeout.cs" />
-    <Compile Include="TinyIoC\TinyIoC.cs" />
-    <Compile Include="TinyIoC\TinyMessenger.cs" />
     <Compile Include="XmlSerialization.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Lib\iOS\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Lib\iOS\TinyIoC.dll" />
   </ItemGroup>
 </Project>
